--- a/index.html
+++ b/index.html
@@ -4,86 +4,97 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>NathanMarketing | Cold Emails That Book Clients</title>
+  <title>NathanMarketing | Copy That Converts</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
-      padding: 0;
-      background: #f4f4f4;
-      color: #222;
-      line-height: 1.6;
+      font-family: 'Segoe UI', sans-serif;
+      background: #0f0f0f;
+      color: #f5f5f5;
     }
     header {
-      background: #111;
-      color: #fff;
-      padding: 2rem;
       text-align: center;
+      padding: 60px 20px;
+      background: linear-gradient(145deg, #1f1f1f, #111);
+    }
+    header h1 {
+      font-size: 2.8rem;
+      color: #00ffae;
+      margin-bottom: 10px;
+    }
+    header p {
+      font-size: 1.2rem;
+      color: #ccc;
     }
     section {
-      padding: 2rem;
+      padding: 40px 20px;
       max-width: 800px;
       margin: auto;
     }
-    h1, h2 {
-      color: #111;
+    h2 {
+      color: #00ffae;
+      margin-bottom: 10px;
+    }
+    ul {
+      list-style: none;
+      padding-left: 0;
+    }
+    ul li {
+      padding: 10px 0;
+      border-bottom: 1px solid #333;
     }
     .cta {
-      background: #111;
-      color: #fff;
+      background: #00ffae;
+      color: #000;
       text-align: center;
-      padding: 2rem;
-      margin-top: 2rem;
+      padding: 20px;
+      font-weight: bold;
     }
     .cta a {
-      color: #00ff99;
+      color: #000;
       text-decoration: none;
-      font-weight: bold;
+      font-size: 1.1rem;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9rem;
+      color: #777;
+      border-top: 1px solid #333;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>NathanMarketing</h1>
-    <p>Cold Emails That Book Clients</p>
+    <h1>✍️ Copy That Converts</h1>
+    <p>Helping Coaches & Creators book more clients with high-impact words.</p>
   </header>
 
   <section>
-    <h2>🚀 Want More Clients From Cold Email?</h2>
-    <p>I help coaches and creators book 5–15 extra calls a month using done-for-you cold email outreach.</p>
-    <p>DM “Leads” to <strong>@nathannmarketing</strong> on Instagram to get started.</p>
-  </section>
-
-  <section>
-    <h2>How It Works</h2>
+    <h2>🚀 What We Do</h2>
     <ul>
-      <li>✅ I research your ideal client</li>
-      <li>✍️ I write high-converting cold email sequences</li>
-      <li>📬 I send them out and monitor replies</li>
-      <li>🤝 You take the calls and close the deals</li>
+      <li>🔹 Landing Pages That Sell</li>
+      <li>🔹 Ad & Funnel Copy for Coaches</li>
+      <li>🔹 Website Revamps & Brand Messaging</li>
     </ul>
   </section>
 
   <section>
-    <h2>Who It's For</h2>
+    <h2>🧠 Why NathanMarketing?</h2>
     <ul>
-      <li>✔️ Fitness Coaches</li>
-      <li>✔️ Business Consultants</li>
-      <li>✔️ Course Creators</li>
-      <li>✔️ Personal Brands who want leads without ads</li>
+      <li>✅ No fluff — we write to convert</li>
+      <li>✅ Tailored copy for your niche</li>
+      <li>✅ Built for coaches, creators, closers</li>
     </ul>
   </section>
 
-  <section>
-    <h2>Why Cold Email?</h2>
-    <p>No ads. No DMs. No algorithm.<br>
-    Cold email works because it's direct, personal, and scalable.<br>
-    And when done right — it gets you calls booked every week.</p>
+  <section class="cta">
+    📩 DM “Copy” to <a href="https://instagram.com/nathannmarketing" target="_blank">@nathannmarketing</a><br/>
+    or visit: <a href="https://nathanmarketing.github.io">nathanmarketing.github.io</a>
   </section>
 
-  <div class="cta">
-    <p>📩 DM “Leads” to <strong>@nathannmarketing</strong> on Instagram</p>
-    <p>💻 Website by NathanMarketing</p>
-  </div>
+  <footer>
+    © 2025 NathanMarketing. Built for results.
+  </footer>
 </body>
 </html>
