--- a/index.html
+++ b/index.html
@@ -1,100 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>NathanMarketing | Copy That Converts</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: #0f0f0f;
-      color: #f5f5f5;
-    }
-    header {
-      text-align: center;
-      padding: 60px 20px;
-      background: linear-gradient(145deg, #1f1f1f, #111);
-    }
-    header h1 {
-      font-size: 2.8rem;
-      color: #00ffae;
-      margin-bottom: 10px;
-    }
-    header p {
-      font-size: 1.2rem;
-      color: #ccc;
-    }
-    section {
-      padding: 40px 20px;
-      max-width: 800px;
-      margin: auto;
-    }
-    h2 {
-      color: #00ffae;
-      margin-bottom: 10px;
-    }
-    ul {
-      list-style: none;
-      padding-left: 0;
-    }
-    ul li {
-      padding: 10px 0;
-      border-bottom: 1px solid #333;
-    }
-    .cta {
-      background: #00ffae;
-      color: #000;
-      text-align: center;
-      padding: 20px;
-      font-weight: bold;
-    }
-    .cta a {
-      color: #000;
-      text-decoration: none;
-      font-size: 1.1rem;
-    }
-    footer {
-      text-align: center;
-      padding: 20px;
-      font-size: 0.9rem;
-      color: #777;
-      border-top: 1px solid #333;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>✍️ Copy That Converts</h1>
-    <p>Helping Coaches & Creators book more clients with high-impact words.</p>
-  </header>
-
-  <section>
-    <h2>🚀 What We Do</h2>
-    <ul>
-      <li>🔹 Landing Pages That Sell</li>
-      <li>🔹 Ad & Funnel Copy for Coaches</li>
-      <li>🔹 Website Revamps & Brand Messaging</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>🧠 Why NathanMarketing?</h2>
-    <ul>
-      <li>✅ No fluff — we write to convert</li>
-      <li>✅ Tailored copy for your niche</li>
-      <li>✅ Built for coaches, creators, closers</li>
-    </ul>
-  </section>
-
-  <section class="cta">
-    📩 DM “Copy” to <a href="https://instagram.com/nathannmarketing" target="_blank">@nathannmarketing</a><br/>
-    or visit: <a href="https://nathanmarketing.github.io">nathanmarketing.github.io</a>
-  </section>
-
-  <footer>
-    © 2025 NathanMarketing. Built for results.
-  </footer>
-</body>
-</html>
+PLACEHOLDER - to be replaced with actual HTML.
