--- a/index.html
+++ b/index.html
@@ -1,14 +1,3 @@
-<!--
-  This file provides a modern redesign for NathanMarketing's homepage.  It takes
-  inspiration from professional SaaS landing pages with dark themes, large
-  typography and clear call‑to‑actions.  The page is mobile responsive and
-  uses only vanilla HTML/CSS to ensure it works on GitHub Pages.
-
-  To use this redesign on your site, copy the contents of this file over
-  your existing `index.html` and commit it to your GitHub repository.  All
-  styles are contained in the `<style>` block for simplicity; you may move
-  them into a separate CSS file if you prefer.
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,7 +10,6 @@
   <!-- Font Awesome for icons (loaded via CDN) -->
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <style>
-    /* Reset default margins/paddings */
     * {
       box-sizing: border-box;
       margin: 0;
@@ -50,7 +38,6 @@
       font-size: 1.1rem;
       color: #a2b8c5;
     }
-    /* Hero Section */
     .hero {
       position: relative;
       overflow: hidden;
@@ -59,19 +46,17 @@
       background: radial-gradient(circle at 50% 30%, #0a192f 0%, #020a13 70%);
     }
     .hero .logo {
-      width: 64px;
-      height: 64px;
+      width: 80px;
+      height: auto;
       margin: 0 auto 2rem;
-      background: linear-gradient(135deg, #34c8ff 0%, #5a78ff 100%);
-      border-radius: 20%;
       display: flex;
       align-items: center;
       justify-content: center;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
     }
-    .hero .logo i {
-      font-size: 1.8rem;
-      color: #ffffff;
+    .hero .logo img {
+      width: 80px;
+      height: auto;
+      border-radius: 12px;
     }
     .hero h2 {
       font-size: clamp(2rem, 5vw, 4rem);
@@ -104,7 +89,6 @@
     .cta-button:hover {
       background: #53a5e7;
     }
-    /* Founder's note section */
     .founder-note {
       padding: 5rem 1rem 4rem;
       text-align: center;
@@ -138,7 +122,6 @@
       font-size: 0.9rem;
       color: #6b7d92;
     }
-    /* Benefits section */
     .benefits {
       padding: 4rem 1rem 6rem;
       background: #01060d;
@@ -188,7 +171,6 @@
       color: #9bacbf;
       line-height: 1.6;
     }
-    /* Footer */
     footer {
       background: #01060d;
       padding: 2rem 1rem;
@@ -211,15 +193,17 @@
     <h1>NathanMarketing</h1>
     <p>Persuasive Copywriting for Coaches, Creators &amp; Founders</p>
   </header>
-  <!-- Hero Section with bold messaging and CTA -->
+
+  <!-- Hero Section with image logo -->
   <section class="hero">
     <div class="logo">
-      <i class="fas fa-feather-alt"></i>
+      <img src="logo.png" alt="NathanMarketing Logo" />
     </div>
     <h2>Words That Sell <span>Without Being Salesy</span></h2>
     <h3>Turn browsers into buyers with magnetic copywriting</h3>
     <a href="#contact" class="cta-button">Message Us Now</a>
   </section>
+
   <!-- Founder's note / mission statement -->
   <section class="founder-note" id="founder-note">
     <div class="badge">
@@ -234,6 +218,7 @@
     </p>
     <cite>— Nathan, Founder &amp; Lead Copywriter</cite>
   </section>
+
   <!-- Benefits section -->
   <section class="benefits">
     <h3>Why Choose Us?</h3>
@@ -256,7 +241,8 @@
       </div>
     </div>
   </section>
-  <!-- Footer with basic contact details -->
+
+  <!-- Footer -->
   <footer id="contact">
     <p>
       Need help or a custom quote? DM “Copy” to <a href="https://instagram.com/nathanmarketing" style="color:#7dc3ff; text-decoration:underline;">@nathanmarketing</a> on Instagram
