--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       background: radial-gradient(circle at 50% 30%, #0a192f 0%, #020a13 70%);
     }
     .hero .logo {
-      width: 80px;
+      width: 120px;
       height: auto;
       margin: 0 auto 2rem;
       display: flex;
@@ -54,7 +54,7 @@
       justify-content: center;
     }
     .hero .logo img {
-      width: 80px;
+      width: 120px;
       height: auto;
       border-radius: 12px;
     }
@@ -242,11 +242,13 @@
     </div>
   </section>
 
-  <!-- Footer -->
+  <!-- Footer with updated contact -->
   <footer id="contact">
     <p>
-      Need help or a custom quote? DM “Copy” to <a href="https://instagram.com/nathanmarketing" style="color:#7dc3ff; text-decoration:underline;">@nathanmarketing</a> on Instagram
-      or email us at <a href="mailto:info@nathanmarketing.io" style="color:#7dc3ff; text-decoration:underline;">info@nathanmarketing.io</a>
+      Need help or a custom quote? DM “Copy” to
+      <a href="https://instagram.com/nathanmarketing" style="color:#7dc3ff; text-decoration:underline;">@nathanmarketing</a>
+      on Instagram or email us at
+      <a href="mailto:nathanweleliat@gmail.com" style="color:#7dc3ff; text-decoration:underline;">nathanweleliat@gmail.com</a>
     </p>
     <p>&copy; 2025 NathanMarketing</p>
   </footer>
